--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@
 
 buildscript {
     repositories {
+        mavenCentral()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0'
+        classpath 'com.android.tools.build:gradle:2.3.3'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -15,11 +16,12 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        mavenCentral()
     }
 
     ext {
-        androidSupportVersion = "25.3.0"
-
+        androidSupportVersion = "25.3.1"
+        butterKnifeVersion = '8.5.1'
     }
 }
 
